multiple body tags

--- a/sito_modificato/conversions-pressure.html
+++ b/sito_modificato/conversions-pressure.html
@@ -71,39 +71,39 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9476637732224939"
      crossorigin="anonymous"></script>
 
-  <header class="bg-white shadow-sm sticky top-0 z-50">
-    <nav class="container mx-auto px-4 lg:px-6 py-4" aria-label="Primary">
-      <div class="flex justify-between items-center">
-        <a href="https://calcdomain.com" class="text-2xl font-bold text-blue-600">CalcDomain</a>
-        <div class="w-full max-w-md hidden md:block mx-8">
-          <div class="relative">
-            <input type="search" id="search-input" placeholder="Search for a calculator..." class="w-full py-2 px-4 pr-10 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" autocomplete="off" />
-            <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
-            <div id="search-results" class="absolute top-full left-0 right-0 bg-white shadow-lg rounded-lg mt-2 max-h-96 overflow-y-auto z-50 hidden border border-gray-200"></div>
+      <header class="bg-white shadow-sm sticky top-0 z-50">
+      <nav class="container mx-auto px-4 lg:px-6 py-4" aria-label="Primary">
+        <div class="flex justify-between items-center">
+          <a href="https://calcdomain.com" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+          <div class="w-full max-w-md hidden md:block mx-8">
+            <div class="relative">
+              <input type="search" id="search-input" placeholder="Search for a calculator..." class="w-full py-2 px-4 pr-10 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" autocomplete="off" />
+              <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 0 0114 0z"></path></svg>
+              <div id="search-results" class="absolute top-full left-0 right-0 bg-white shadow-lg rounded-lg mt-2 max-h-96 overflow-y-auto z-50 hidden border border-gray-200"></div>
+            </div>
           </div>
-        </div>
-        <div class="hidden md:flex items-center space-x-6">
-          <a href="https://calcdomain.com/search" class="text-gray-700 hover:text-blue-600 transition-colors">Advanced Search</a>
-          <a href="https://calcdomain.com/#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
-        </div>
-        <button id="mobile-menu-toggle" class="md:hidden p-2" aria-controls="mobile-menu" aria-expanded="false" aria-label="Open menu" type="button">
-          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
-        </button>
-      </div>
-      <nav id="mobile-menu" class="md:hidden mt-4 hidden" aria-label="Mobile menu" role="navigation">
-        <div class="mb-4">
-          <div class="relative">
-            <input type="search" id="mobile-search-input" placeholder="Search calculators..." class="w-full py-3 px-4 pr-10 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
-            <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+          <div class="hidden md:flex items-center space-x-6">
+            <a href="https://calcdomain.com/search" class="text-gray-700 hover:text-blue-600 transition-colors">Advanced Search</a>
+            <a href="https://calcdomain.com/#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
           </div>
+          <button id="mobile-menu-toggle" class="md:hidden p-2" aria-controls="mobile-menu" aria-expanded="false" aria-label="Open menu" type="button">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
+          </button>
         </div>
-        <div class="space-y-2">
-          <a href="https://calcdomain.com/search" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-          <a href="https://calcdomain.com/#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
-        </div>
+        <nav id="mobile-menu" class="md:hidden mt-4 hidden" aria-label="Mobile menu" role="navigation">
+          <div class="mb-4">
+            <div class="relative">
+              <input type="search" id="mobile-search-input" placeholder="Search calculators..." class="w-full py-3 px-4 pr-10 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
+              <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 0 0114 0z"></path></svg>
+            </div>
+          </div>
+          <div class="space-y-2">
+            <a href="https://calcdomain.com/search" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+            <a href="https://calcdomain.com/#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+          </div>
+        </nav>
       </nav>
-    </nav>
-  </header>
+    </header>
 
   <div class="container mx-auto px-4 py-8">
     <nav id="breadcrumb-container" class="text-sm mb-4 text-gray-600">
@@ -444,52 +444,3 @@
 
 </body>
 </html>
-
-<link rel="icon" type="image/png" href="https://calcdomain.com/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="https://calcdomain.com/favicon.svg" />
-<link rel="shortcut icon" href="https://calcdomain.com/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="https://calcdomain.com/apple-touch-icon.png" />
-<link rel="manifest" href="https://calcdomain.com/site.webmanifest" />
-<meta charset="utf-8"><meta content="width=device-width, initial-scale=1.0" name="viewport">
-<title>Pressure Converters | Conversions</title>
-<meta content="PSI, Pascals, bar, atm, Torr, inHg, ft H₂O, and more." name="description">
-
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="search.js" defer></script>
-<!-- MathJax for LaTeX formulas -->
-<script>
-  window.MathJax = {
-    tex: {
-      inlineMath: [['\(','\)'], ['$', '$']],
-      displayMath: [['$','$'], ['\[','\]']]
-    },
-    svg: { fontCache: 'global' }
-  };
-</script>
-<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<link rel="preload" href="https://calcdomain.com/assets/js/mobile-menu.js" as="script">
-<link rel="preload" href="https://calcdomain.com/assets/js/page-enhancements.js" as="script">
-
-</head>
-<body>
-<main class="main-content" id="main-content"><div class="container">
-<nav style="margin-bottom:1rem;font-size:.9rem;color:var(--muted-text-color);">Home / <a href="https://calcdomain.com/subcategories/math-conversions-measurement-unit-conversions">Conversions</a> / Pressure</nav>
-<h1>Pressure</h1>
-<p>HVAC, hydraulics, meteorology—reliable pressure conversions.</p>
-<div class="grid grid-3-col" style="margin-top:1rem;">
-<a class="card" href="https://calcdomain.com/atm-to-psi"><h3>Atmospheres to PSI Converter</h3><p>atm → psi.</p></a>
-<a class="card" href="https://calcdomain.com/bar-to-psi"><h3>Bar to PSI Converter</h3><p>bar → psi.</p></a>
-<h3>Dynes/cm² to Pascals Converter</h3><p>dyn/cm² → Pa.</p>
-<a class="card" href="https://calcdomain.com/feet-of-water-to-psi"><h3>Feet of Water to PSI Converter</h3><p>ft H₂O → psi.</p></a>
-<a class="card" href="https://calcdomain.com/inhg-to-psi"><h3>Inches of Mercury to PSI Converter</h3><p>inHg → psi.</p></a>
-<a class="card" href="https://calcdomain.com/kpa-to-psi"><h3>Kilopascals to PSI Converter</h3><p>kPa → psi.</p></a>
-<a class="card" href="https://calcdomain.com/mbar-to-psi"><h3>Millibars to PSI Converter</h3><p>mbar → psi.</p></a>
-<a class="card" href="https://calcdomain.com/pa-to-psi"><h3>Pascals to PSI Converter</h3><p>Pa → psi.</p></a>
-<a class="card" href="https://calcdomain.com/psi-to-pa"><h3>PSI to Pascals Converter</h3><p>psi → Pa.</p></a>
-<a class="card" href="https://calcdomain.com/torr-to-pa"><h3>Torr to Pascals Converter</h3><p>Torr → Pa.</p></a>
-</div>
-</div></main>
-<!-- Standard Footer --> 
-
-</body></html>
