--- a/sito_modificato/square-feet-to-square-meters.html
+++ b/sito_modificato/square-feet-to-square-meters.html
@@ -6,7 +6,7 @@
     
     <title>Kilometers to Miles (km to miles) Converter</title>
     <meta name="description" content="Instantly convert kilometers (km) to miles (mi) and kph to mph. Our bidirectional tool is perfect for distance and speed, with mental math tricks and charts.">
-    <link rel="canonical" href="https://calcdomain.com/km-to-miles">
+    <link rel="canonical" href="square-feet-to-square-meters.html">
     
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
