--- a/sito_modificato/bsa-calculator.html
+++ b/sito_modificato/bsa-calculator.html
@@ -113,15 +113,39 @@
 </head>
 <body class="bg-gray-50 text-gray-900">
   <!-- Header (non-sticky per spec) -->
-  <header class="bg-white border-b">
-    <nav class="container mx-auto px-4 lg:px-6 py-4 flex items-center justify-between">
-      <a href="https://calcdomain.com" class="text-2xl font-extrabold text-blue-600">CalcDomain</a>
-      <div class="hidden md:flex items-center gap-6 text-sm">
-        <a href="https://calcdomain.com/search" class="hover:text-blue-600">Advanced Search</a>
-        Categories
-      </div>
-    </nav>
-  </header>
+      <header class="bg-white shadow-sm sticky top-0 z-50">
+      <nav class="container mx-auto px-4 lg:px-6 py-4" aria-label="Primary">
+        <div class="flex justify-between items-center">
+          <a href="https://calcdomain.com" class="text-2xl font-bold text-blue-600">CalcDomain</a>
+          <div class="w-full max-w-md hidden md:block mx-8">
+            <div class="relative">
+              <input type="search" id="search-input" placeholder="Search for a calculator..." class="w-full py-2 px-4 pr-10 border border-gray-300 rounded-full focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent" autocomplete="off" />
+              <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 0 0114 0z"></path></svg>
+              <div id="search-results" class="absolute top-full left-0 right-0 bg-white shadow-lg rounded-lg mt-2 max-h-96 overflow-y-auto z-50 hidden border border-gray-200"></div>
+            </div>
+          </div>
+          <div class="hidden md:flex items-center space-x-6">
+            <a href="https://calcdomain.com/search" class="text-gray-700 hover:text-blue-600 transition-colors">Advanced Search</a>
+            <a href="https://calcdomain.com/#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
+          </div>
+          <button id="mobile-menu-toggle" class="md:hidden p-2" aria-controls="mobile-menu" aria-expanded="false" aria-label="Open menu" type="button">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
+          </button>
+        </div>
+        <nav id="mobile-menu" class="md:hidden mt-4 hidden" aria-label="Mobile menu" role="navigation">
+          <div class="mb-4">
+            <div class="relative">
+              <input type="search" id="mobile-search-input" placeholder="Search calculators..." class="w-full py-3 px-4 pr-10 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
+              <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 0 0114 0z"></path></svg>
+            </div>
+          </div>
+          <div class="space-y-2">
+            <a href="https://calcdomain.com/search" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
+            <a href="https://calcdomain.com/#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+          </div>
+        </nav>
+      </nav>
+    </header>
 
   <main class="container mx-auto px-4 lg:px-6 py-8">
     <div class="flex flex-col lg:flex-row gap-8">
@@ -1137,18 +1161,6 @@
       if (chart) { chart.destroy(); chart = null; }
     });
     els.printBtn.addEventListener('click', (e)=>{ e.preventDefault(); window.print(); });
-
-    // Initialize defaults
-    setUnits();
-    // Sensible demo values to avoid empty LCP on first load (no CLS; results area has min-height)
-    els.height.value = '170';
-    els.weight.value = '65';
-    calculate();
-  })();
-  </script>
-</body>
-</html>
-ult(); window.print(); });
 
     // Initialize defaults
     setUnits();
