--- a/sito_modificato/micrometers-to-nm.html
+++ b/sito_modificato/micrometers-to-nm.html
@@ -6,7 +6,7 @@
     
     <title>Meters to Nanometers (m to nm) Converter</title>
     <meta name="description" content="Instantly convert meters (m) to nanometers (nm) and micrometers (µm). Our 3-way scientific converter also shows results in scientific notation.">
-    <link rel="canonical" href="https://calcdomain.com/meters-to-nm">
+    <link rel="canonical" href="micrometers-to-nm">
     
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
