--- a/sito_modificato/subcategories/automotive.html
+++ b/sito_modificato/subcategories/automotive.html
@@ -15,7 +15,7 @@
 <link rel="manifest" href="https://calcdomain.com/site.webmanifest" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Automotive Calculators - Professional Tools for Automotive</title>
+    <title>Automotive Calculators -  Tools for Automotive</title>
     <meta name="description" content="Calculate automotive needs including fuel efficiency, maintenance costs, and vehicle-related expenses.">
     
     <script src="https://cdn.tailwindcss.com"></script>
