--- a/gallons-to-liters.html
+++ b/gallons-to-liters.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Gallons to Liters Converter (US & UK)  | CalcDomain</title>
-    <meta name="description" content="Instantly convert gallons to liters (gal to L) with our free bidirectional calculator. Supports both US liquid gallons and UK imperial gallons.">
+    <title>Gallons to Liters Converter (US & UK) | CalcDomain</title>
+    <meta name="description" content="Instantly convert gallons to liters (gal to L) with our bidirectional calculator. Supports both US liquid gallons and UK imperial gallons.">
     <link rel="canonical" href="https://calcdomain.com/gallons-to-liters">
     
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
