--- a/sito_modificato/bisection-method.html
+++ b/sito_modificato/bisection-method.html
@@ -1013,7 +1013,7 @@
             const result = runBisection(f, aNum, bNum, tol, maxIter);
 
             function fmt(x) {
-              return Number.isFinite(x) ? x.toFixed(decimals) : 'NaN';
+              return Number.isFinite(x) ? x.toFixed(decimals) : '—';
             }
 
             rootEl.textContent = fmt(result.root);
