--- a/sito_modificato/circular-segment-area.html
+++ b/sito_modificato/circular-segment-area.html
@@ -791,7 +791,7 @@
       const resultEl = document.getElementById('segment-result');
 
       function formatNumber(x) {
-        if (!isFinite(x)) return 'NaN';
+        if (!isFinite(x)) return '—';
         const absx = Math.abs(x);
         if (absx !== 0 && (absx < 1e-4 || absx > 1e7)) {
           return x.toExponential(6);
