--- a/sito_modificato/derivative.html
+++ b/sito_modificato/derivative.html
@@ -900,7 +900,7 @@
           if (!isFinite(v)) {
             if (v === Infinity) return '+∞';
             if (v === -Infinity) return '−∞';
-            return 'NaN';
+            return '—';
           }
           const d = getDecimals();
           return Number(v.toFixed(d)).toString();
@@ -1037,7 +1037,7 @@
             const tdDfx = document.createElement('td');
             tdDfx.className = 'px-3 py-1.5 text-gray-700';
             if (!isFinite(dfx)) {
-              tdDfx.textContent = 'NaN';
+              tdDfx.textContent = '—';
               tdDfx.classList.add('text-red-600');
             } else {
               tdDfx.textContent = Number(dfx.toFixed(d)).toString();
@@ -1118,13 +1118,13 @@
           if (isFinite(derivH.value)) {
             setResult(resDerivH, fmt(derivH.value));
           } else {
-            setResult(resDerivH, 'NaN');
+            setResult(resDerivH, '—');
           }
 
           if (isFinite(derivH2.value)) {
             setResult(resDerivH2, fmt(derivH2.value));
           } else {
-            setResult(resDerivH2, 'NaN');
+            setResult(resDerivH2, '—');
           }
 
           setResult(resScheme, derivH.scheme === 'failed'
@@ -1277,7 +1277,7 @@
           if (!isFinite(v)) {
             if (v === Infinity) return '+∞';
             if (v === -Infinity) return '−∞';
-            return 'NaN';
+            return '—';
           }
           const d = getDecimals();
           return Number(v.toFixed(d)).toString();
@@ -1414,7 +1414,7 @@
             const tdDfx = document.createElement('td');
             tdDfx.className = 'px-3 py-1.5 text-gray-700';
             if (!isFinite(dfx)) {
-              tdDfx.textContent = 'NaN';
+              tdDfx.textContent = '—';
               tdDfx.classList.add('text-red-600');
             } else {
               tdDfx.textContent = Number(dfx.toFixed(d)).toString();
@@ -1495,13 +1495,13 @@
           if (isFinite(derivH.value)) {
             setResult(resDerivH, fmt(derivH.value));
           } else {
-            setResult(resDerivH, 'NaN');
+            setResult(resDerivH, '—');
           }
 
           if (isFinite(derivH2.value)) {
             setResult(resDerivH2, fmt(derivH2.value));
           } else {
-            setResult(resDerivH2, 'NaN');
+            setResult(resDerivH2, '—');
           }
 
           setResult(resScheme, derivH.scheme === 'failed'
@@ -1654,7 +1654,7 @@
           if (!isFinite(v)) {
             if (v === Infinity) return '+∞';
             if (v === -Infinity) return '−∞';
-            return 'NaN';
+            return '—';
           }
           const d = getDecimals();
           return Number(v.toFixed(d)).toString();
@@ -1791,7 +1791,7 @@
             const tdDfx = document.createElement('td');
             tdDfx.className = 'px-3 py-1.5 text-gray-700';
             if (!isFinite(dfx)) {
-              tdDfx.textContent = 'NaN';
+              tdDfx.textContent = '—';
               tdDfx.classList.add('text-red-600');
             } else {
               tdDfx.textContent = Number(dfx.toFixed(d)).toString();
@@ -1872,13 +1872,13 @@
           if (isFinite(derivH.value)) {
             setResult(resDerivH, fmt(derivH.value));
           } else {
-            setResult(resDerivH, 'NaN');
+            setResult(resDerivH, '—');
           }
 
           if (isFinite(derivH2.value)) {
             setResult(resDerivH2, fmt(derivH2.value));
           } else {
-            setResult(resDerivH2, 'NaN');
+            setResult(resDerivH2, '—');
           }
 
           setResult(resScheme, derivH.scheme === 'failed'
