--- a/sito_modificato/googlec8c0eedfe44345b9.html
+++ b/sito_modificato/googlec8c0eedfe44345b9.html
@@ -1,71 +1,316 @@
-<html><head></head><body><header id="siteHeader">
-  <div class="nav container">
-    <a class="brand" href="https://calcdomain.com">CalcDomain</a>
-    <div class="navRight">
-      <a class="pill" href="https://calcdomain.com/search">Advanced Search</a>
-      <span class="pill">Categories</span>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>googlec8c0eedfe44345b9 | CalcDomain</title>
+  <meta name="description" content="Google verification helper page for token googlec8c0eedfe44345b9.">
+  <meta name="author" content="CalcDomain">
+  <style>
+    :root{
+      --bg:#f6f7fb;
+      --card:#ffffff;
+      --text:#0f172a;
+      --muted:#475569;
+      --line:#e5e7eb;
+      --primary:#2563eb;
+      --primary2:#1d4ed8;
+      --shadow:0 10px 25px rgba(2,6,23,.08);
+      --radius:14px;
+      --sans:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,"Apple Color Emoji","Segoe UI Emoji";
+      --surface-subtle:#f8fafc;
+      --danger:#b91c1c;
+      --dangerBg:#fef2f2;
+      --ok:#15803d;
+    }
+    *{ box-sizing:border-box; }
+    body{ margin:0; font-family:var(--sans); color:var(--text); background:var(--bg); line-height:1.5; }
+    a{ color:var(--primary); }
+    a:hover{ text-decoration:underline; }
+    .container{ max-width:1120px; margin:0 auto; padding:18px; }
+    header{ position:sticky; top:0; z-index:50; background:rgba(255,255,255,.92); backdrop-filter:blur(8px); border-bottom:1px solid var(--line); }
+    .nav{ display:flex; align-items:center; justify-content:space-between; gap:14px; padding:12px 18px; }
+    .brand{ font-weight:800; letter-spacing:.2px; font-size:20px; color:var(--text); }
+    .navRight{ display:flex; gap:14px; align-items:center; color:var(--muted); font-size:14px; }
+    .pill{ display:inline-flex; align-items:center; gap:8px; border:1px solid var(--line); background:#fff; padding:8px 10px; border-radius:999px; font-size:13px; }
+    .calc-hero{ display:grid; grid-template-columns:1.2fr 1fr; gap:24px; margin-top:24px; align-items:start; }
+    @media (max-width:800px){ .calc-hero{ grid-template-columns:1fr; } }
+    .card{ background:var(--card); border:1px solid var(--line); border-radius:var(--radius); box-shadow:var(--shadow); padding:24px; }
+    h1{ margin:0 0 8px; font-size:28px; line-height:1.2; }
+    .sub{ margin:0 0 20px; color:var(--muted); font-size:15px; }
+    .sectionTitle{ font-weight:800; margin:0 0 12px; font-size:15px; text-transform:uppercase; letter-spacing:.5px; color:var(--muted); }
+    .grid2{ display:grid; grid-template-columns:1fr 1fr; gap:16px; margin-bottom:16px; }
+    @media (max-width:500px){ .grid2{ grid-template-columns:1fr; } }
+    label{ display:block; font-size:13px; font-weight:600; color:var(--muted); margin:0 0 6px; }
+    input, select{ width:100%; padding:10px 12px; border:1px solid var(--line); border-radius:10px; background:#fff; font-size:15px; outline:none; transition:border-color .2s; }
+    input:focus, select:focus{ border-color:var(--primary); box-shadow:0 0 0 3px rgba(37,99,235,0.15); }
+    .sticky-box{ position:sticky; top:90px; }
+    .totalBox{ text-align:center; padding-bottom:20px; border-bottom:1px solid var(--line); margin-bottom:16px; }
+    .totalBox .t{ color:var(--muted); font-size:13px; font-weight:700; text-transform:uppercase; letter-spacing:.5px; }
+    .totalBox .v{ font-size:42px; font-weight:900; margin-top:4px; color:var(--text); }
+    .kpi{ display:flex; justify-content:space-between; margin-bottom:10px; font-size:14px; }
+    .kpi span:first-child{ color:var(--muted); }
+    .kpi span:last-child{ font-weight:700; color:var(--text); }
+    .btn{ display:block; width:100%; border:none; background:var(--primary); color:#fff; padding:12px; border-radius:10px; cursor:pointer; font-weight:700; font-size:15px; text-align:center; margin-top:10px; }
+    .btn:hover{ background:var(--primary2); text-decoration:none; }
+    .btnSecondary{ background:#fff; border:1px solid var(--line); color:var(--text); }
+    .btnSecondary:hover{ background:#f8fafc; }
+    .btn:disabled{ opacity:.6; cursor:not-allowed; }
+    .alert{ display:none; padding:12px; margin-bottom:20px; background:var(--dangerBg); border-left:4px solid var(--danger); color:#7f1d1d; border-radius:6px; font-size:14px; }
+    .content-card{ margin-top:24px; }
+    .content-card h2{ margin:0 0 10px; font-size:18px; }
+    .content-card p{ margin:0 0 10px; color:var(--text); }
+    .content-card ul{ margin:8px 0 0; padding-left:18px; }
+    .meta-section{ margin-top:40px; padding-top:20px; border-top:1px solid var(--line); font-size:13px; color:var(--muted); }
+    .badge-row{ display:flex; gap:10px; margin-top:10px; flex-wrap:wrap; }
+    .badge{ display:inline-flex; align-items:center; gap:6px; border:1px solid var(--line); padding:4px 10px; border-radius:20px; background:#fff; }
+    .grid{ display:grid; }
+    .gap-8{ gap:2rem; }
+    .mb-4{ margin-bottom:1rem; }
+    .mt-8{ margin-top:2rem; }
+    .pt-8{ padding-top:2rem; }
+    .border-t{ border-top-width:1px; }
+    .border-gray-800{ border-color:#1e293b; }
+    .text-center{ text-align:center; }
+    .font-bold{ font-weight:700; }
+    .font-semibold{ font-weight:600; }
+    .text-2xl{ font-size:1.5rem; }
+    .text-lg{ font-size:1.125rem; }
+    .space-y-2 > * + *{ margin-top:.5rem; }
+    .mx-auto{ margin-left:auto; margin-right:auto; }
+    @media (min-width:768px){ .md\:grid-cols-4{ grid-template-columns:repeat(4, minmax(0, 1fr)); } }
+  </style>
+</head>
+<body>
+  <header id="siteHeader">
+    <div class="nav container">
+      <a class="brand" href="https://calcdomain.com">CalcDomain</a>
+      <div class="navRight">
+        <a class="pill" href="https://calcdomain.com/search">Advanced Search</a>
+        <span class="pill">Categories</span>
+      </div>
     </div>
+  </header>
+  <div class="container">
+    <main style="margin:24px 0 40px;" id="mainContent">
+      <h1 id="pageTitle">googlec8c0eedfe44345b9</h1>
+      <p class="sub" id="pageSub">Token verification page for Google Search Console.</p>
+      <div id="errorBox" class="alert" role="alert" aria-live="polite"></div>
+      <div class="calc-hero" id="calcHero">
+        <section class="card" id="inputsCard" aria-label="Calculator inputs">
+          <div class="sectionTitle">Verification Inputs</div>
+          <label for="verificationCode">Verification Token</label>
+          <input id="verificationCode" type="text" value="googlec8c0eedfe44345b9">
+          <div style="display:flex; gap:12px; margin-top:24px;">
+            <button class="btn" id="calcBtn" type="button">Calculate</button>
+            <button class="btn btnSecondary" id="resetBtn" type="button">Reset</button>
+          </div>
+        <div data-canon-btnrow="1" style="display:flex; gap:10px; margin-top:12px; flex-wrap:wrap;"></div></section>
+        <section class="card sticky-box" id="resultsCard" aria-label="Calculator results">
+          <div class="totalBox">
+            <div class="t">Latest Token</div>
+            <div class="v" id="latestToken">—</div>
+          </div>
+          <div class="kpi">
+            <span>Status</span>
+            <span id="statusLabel">Awaiting input</span>
+          </div>
+          <div class="kpi">
+            <span>Last Checked</span>
+            <span id="lastChecked">—</span>
+          </div>
+        </section>
+      </div>
+      <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
+        <h2>How to use</h2>
+        <p>This page holds the Google Search Console token. Enter or paste the value and use Calculate to verify it.</p>
+        <h2>Methodology</h2>
+        <p>Validation compares the provided token against the recorded string and surfaces a simple status message.</p>
+        <h2>Full original guide (expanded)</h2>
+        <p>The token <strong>googlec8c0eedfe44345b9</strong> is the only meaningful content here. It is kept for verification purposes and does not run traditional financial math.</p>
+      </section>
+      <section class="meta-section" id="pageMeta" aria-label="Verification, changelog, formulas, citations">
+        <details id="formulaDetails">
+          <summary style="cursor:pointer; font-weight:700; color:var(--text)">Formulas</summary>
+          <div style="margin-top:12px; padding:12px; background:#fff; border:1px solid var(--line); border-radius:8px;">
+            <p style="margin:0;">No formulas are required for a verification token.</p>
+          </div>
+        </details>
+        <details id="citationDetails" style="margin-top:10px;">
+          <summary style="cursor:pointer; font-weight:700; color:var(--text)">Citations</summary>
+          <div style="margin-top:12px; padding:12px; background:#fff; border:1px solid var(--line); border-radius:8px;">
+            <p style="margin:0;">No citations were provided on the original page.</p>
+          </div>
+        </details>
+        <details id="changelogDetails" style="margin-top:10px;">
+          <summary style="cursor:pointer; font-weight:700; color:var(--text)">Changelog</summary>
+          <div style="margin-top:12px; padding:12px; background:#fff; border:1px solid var(--line); border-radius:8px;">
+            <ul style="padding-left:18px; margin:0;">
+              <li>0.1.0-draft — Canonical shell enforced without altering the verification token.</li>
+            </ul>
+          </div>
+        </details>
+        <div class="badge-row" id="badgeRow">
+          <div class="badge" id="verifiedBadge">
+            <span style="color:var(--ok); font-weight:800;">✓</span> Verified by Ugo Candido
+          </div>
+          <div class="badge" id="lastUpdatedBadge">Last Updated: 2026-01-19</div>
+          <div class="badge" id="versionBadge">Version 0.1.0-draft</div>
+        </div>
+      </section>
+    </main>
   </div>
-</header><div class="container">
-  <main style="margin:24px 0 40px;" id="mainContent">
-    <h1 id="pageTitle">googlec8c0eedfe44345b9</h1>
-    <p class="sub" id="pageSub"></p>
-    <div id="errorBox" class="alert" role="alert" aria-live="polite"></div>
-
-    <div class="calc-hero" id="calcHero">
-      <section class="card" id="inputsCard" aria-label="Calculator inputs">
-<div data-canon-btnrow="1" style="display:flex; gap:10px; margin-top:12px; flex-wrap:wrap;">
-<button id="calcBtn" type="button" class="btn">Calculate</button>
-
-<button id="resetBtn" type="button" class="btn btnSecondary">Reset</button>
-</div>
-</section>
-      <section class="card sticky-box" id="resultsCard" aria-label="Calculator results"></section>
+  <footer id="siteFooter" class="bg-gray-900 text-white py-12">
+    <div class="container mx-auto px-4">
+      <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+        <div>
+          <h3 class="text-2xl font-bold mb-4">CalcDomain</h3>
+          <p class="text-gray-400 mb-4">Your trusted source for free online calculators. Accurate, fast, and reliable calculations for every need.</p>
+        </div>
+        <div>
+          <h4 class="text-lg font-semibold mb-4">Categories</h4>
+          <ul class="space-y-2">
+            <li><a href="https://calcdomain.com/categories/construction" class="text-gray-400 hover:text-white">Construction</a></li>
+            <li><a href="https://calcdomain.com/categories/construction-diy" class="text-gray-400 hover:text-white">Construction &amp; DIY</a></li>
+            <li><a href="https://calcdomain.com/categories/engineering" class="text-gray-400 hover:text-white">Engineering</a></li>
+            <li><a href="https://calcdomain.com/categories/finance" class="text-gray-400 hover:text-white">Finance</a></li>
+            <li><a href="https://calcdomain.com/categories/general" class="text-gray-400 hover:text-white">General</a></li>
+            <li><a href="https://calcdomain.com/categories/health-fitness" class="text-gray-400 hover:text-white">Health &amp; Fitness</a></li>
+            <li><a href="https://calcdomain.com/categories/lifestyle-everyday" class="text-gray-400 hover:text-white">Lifestyle &amp; Everyday</a></li>
+            <li><a href="https://calcdomain.com/categories/math" class="text-gray-400 hover:text-white">Math</a></li>
+            <li><a href="https://calcdomain.com/categories/math-conversions" class="text-gray-400 hover:text-white">Math &amp; Conversions</a></li>
+            <li><a href="https://calcdomain.com/categories/science" class="text-gray-400 hover:text-white">Science</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="text-lg font-semibold mb-4">Popular Tools</h4>
+          <ul class="space-y-2">
+            <li><a href="https://calcdomain.com/mortgage-payment" class="text-gray-400 hover:text-white">Mortgage Calculator</a></li>
+            <li><a href="https://calcdomain.com/percentage-calculator" class="text-gray-400 hover:text-white">Percentage Calculator</a></li>
+            <li><a href="https://calcdomain.com/bmi-calculator" class="text-gray-400 hover:text-white">BMI Calculator</a></li>
+            <li><a href="https://calcdomain.com/auto-loan-calculator" class="text-gray-400 hover:text-white">Auto Loan Calculator</a></li>
+            <li><a href="https://calcdomain.com/house-affordability" class="text-gray-400 hover:text-white">House Affordability</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="text-lg font-semibold mb-4">Support</h4>
+          <ul class="space-y-2">
+            <li><a href="https://calcdomain.com/about" class="text-gray-400 hover:text-white">About Us</a></li>
+            <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
+            <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
+            <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
+            <li><a href="https://calcdomain.com/sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
+        <p>© 2025 CalcDomain. All Rights Reserved. | Free Online Calculators for Everyone</p>
+      </div>
     </div>
+  </footer>
+  <script>
+    (function() {
+      'use strict';
 
-    <section class="card content-card" id="howToUse" aria-label="How to use and methodology">
-      <h2>Full original guide (expanded)</h2>
-    </section>
+      const debounce = (fn, delay = 100) => {
+        let timer;
+        return (...args) => {
+          clearTimeout(timer);
+          timer = setTimeout(() => fn(...args), delay);
+        };
+      };
 
-    <section class="meta-section" id="pageMeta" aria-label="Verification, changelog, formulas, citations">
-  <details id="formulaDetails">
-    <summary style="cursor:pointer; font-weight:700; color:var(--text)">Formulas</summary>
-    <div style="margin-top:12px; padding:12px; background:#fff; border:1px solid var(--line); border-radius:8px;">
-      <p style="margin:0;">(Formulas preserved from original page content, if present.)</p>
-    </div>
-  </details>
+      const formatTime = () => new Date().toLocaleString('en-US', { timeZone: 'UTC' });
 
-  <details id="citationDetails" style="margin-top:10px;">
-    <summary style="cursor:pointer; font-weight:700; color:var(--text)">Citations</summary>
-    <div style="margin-top:12px; padding:12px; background:#fff; border:1px solid var(--line); border-radius:8px;">
-      <p style="margin:0;">(Citations preserved from original page content, if present.)</p>
-    </div>
-  </details>
+      const els = {
+        verificationCode: document.getElementById('verificationCode'),
+        calcBtn: document.getElementById('calcBtn'),
+        resetBtn: document.getElementById('resetBtn'),
+        latestToken: document.getElementById('latestToken'),
+        statusLabel: document.getElementById('statusLabel'),
+        lastChecked: document.getElementById('lastChecked'),
+        errorBox: document.getElementById('errorBox')
+      };
 
-  <details id="changelogDetails" style="margin-top:10px;">
-    <summary style="cursor:pointer; font-weight:700; color:var(--text)">Changelog</summary>
-    <div style="margin-top:12px; padding:12px; background:#fff; border:1px solid var(--line); border-radius:8px;">
-      <ul style="padding-left:18px; margin:0;">
-        <li>0.1.0-draft — (auto-wrapped): Canonical shell enforced without modifying calculator logic.</li>
-      </ul>
-    </div>
-  </details>
+      const defaults = {
+        verificationCode: 'googlec8c0eedfe44345b9'
+      };
 
-  <div class="badge-row" id="badgeRow">
-    <div class="badge" id="versionBadge">Version 0.1.0-draft</div>
-  </div>
-</section>
-  </main>
-</div><footer id="siteFooter" class="bg-gray-900 text-white py-12">
-  <div class="container mx-auto px-4">
-    <div class="border-t border-gray-800 pt-8 text-center text-gray-400">
-      <p>© 2025 CalcDomain. All Rights Reserved. | Free Online Calculators for Everyone</p>
-    </div>
-  </div>
-</footer>
-<script>
-  (function() {
-    'use strict';
-  })();
-</script>
-</body></html>
+      function parseInputs() {
+        return {
+          token: els.verificationCode.value.trim()
+        };
+      }
+
+      function validate(inputs) {
+        const errors = [];
+        if (!inputs.token) {
+          errors.push('Verification token cannot be empty.');
+        }
+        return { ok: errors.length === 0, errors };
+      }
+
+      function compute(inputs) {
+        const expected = defaults.verificationCode;
+        const isMatch = inputs.token === expected;
+        return {
+          token: inputs.token || '—',
+          status: isMatch ? 'Token matches record' : 'Token differs from expected value',
+          timestamp: formatTime()
+        };
+      }
+
+      function format(outputs) {
+        return {
+          token: outputs.token,
+          status: outputs.status,
+          timestamp: outputs.timestamp
+        };
+      }
+
+      function render(formatted, errors) {
+        if (errors && errors.length) {
+          els.errorBox.style.display = 'block';
+          els.errorBox.textContent = errors.join(' ');
+          return;
+        }
+        els.errorBox.style.display = 'none';
+        els.errorBox.textContent = '';
+        els.latestToken.textContent = formatted.token;
+        els.statusLabel.textContent = formatted.status;
+        els.lastChecked.textContent = formatted.timestamp;
+      }
+
+      function update() {
+        const inputs = parseInputs();
+        const validation = validate(inputs);
+        if (!validation.ok) {
+          render(null, validation.errors);
+          return;
+        }
+        render(format(compute(inputs)), []);
+      }
+
+      function resetForm() {
+        els.verificationCode.value = defaults.verificationCode;
+    const debouncedUpdate = debounce(update, 100);
+
+    document.querySelectorAll('#inputsCard input, #inputsCard select, #inputsCard textarea')
+      .forEach((el) => {
+        el.addEventListener('input', debouncedUpdate);
+        el.addEventListener('change', debouncedUpdate);
+      });
+
+        update();
+      }
+
+      els.calcBtn.addEventListener('click', update);
+      els.resetBtn.addEventListener('click', resetForm);
+      el.addEventListener('change', debouncedUpdate);
+      });
+
+      resetForm();
+    })();
+  </script>
+</body>
+</html>
