--- a/sito_modificato/income-tax-calculator.html
+++ b/sito_modificato/income-tax-calculator.html
@@ -4965,7 +4965,7 @@ const defaultBrackets = [
 { limit: 100525, rate: 22 },
 { limit: 191950, rate: 24 },
 { limit: 243725, rate: 32 },
-{ limit: Infinity, rate: 35 } // 'Infinity' represents "and above"
+{ limit: Infinity, rate: 35 } // 'infinite' represents "and above"
 ];
 
 // --- Formatters ---
@@ -10212,7 +10212,7 @@ const defaultBrackets = [
 { limit: 100525, rate: 22 },
 { limit: 191950, rate: 24 },
 { limit: 243725, rate: 32 },
-{ limit: Infinity, rate: 35 } // 'Infinity' represents "and above"
+{ limit: Infinity, rate: 35 } // 'infinite' represents "and above"
 ];
 
 // --- Formatters ---
@@ -15461,7 +15461,7 @@ const defaultBrackets = [
 { limit: 100525, rate: 22 },
 { limit: 191950, rate: 24 },
 { limit: 243725, rate: 32 },
-{ limit: Infinity, rate: 35 } // 'Infinity' represents "and above"
+{ limit: Infinity, rate: 35 } // 'infinite' represents "and above"
 ];
 
 // --- Formatters ---
