--- a/sito_modificato/integral.html
+++ b/sito_modificato/integral.html
@@ -881,7 +881,7 @@
           if (!isFinite(v)) {
             if (v === Infinity) return '+∞';
             if (v === -Infinity) return '−∞';
-            return 'NaN';
+            return '—';
           }
           const d = getDecimals();
           return Number(v.toFixed(d)).toString();
@@ -1042,9 +1042,9 @@
           // Simpson with n and 2n
           const I1 = integrateSimpson(f, a, b, n, evalCounter);
           if (!isFinite(I1.value)) {
-            setResult(resIntegral, 'NaN');
-            setResult(resAbsArea, 'NaN');
-            setResult(resAverage, 'NaN');
+            setResult(resIntegral, '—');
+            setResult(resAbsArea, '—');
+            setResult(resAverage, '—');
             setResult(resError, '—');
             setResult(resConvergence, 'Function returned non-finite values inside the interval.');
             setResult(resWarnings, 'Check the domain of your function. Division by zero, negative arguments for sqrt, or log of non-positive numbers may occur.');
@@ -1074,11 +1074,11 @@
 
           const totalEvals = evalCounter.count + evalCounterAbs.count;
           setResult(resIntegral, fmt(I));
-          setResult(resAbsArea, isFinite(absArea) ? fmt(absArea) : 'NaN');
+          setResult(resAbsArea, isFinite(absArea) ? fmt(absArea) : '—');
 
           if (b !== a) {
             const avg = I / (b - a);
-            setResult(resAverage, isFinite(avg) ? fmt(avg) : 'NaN');
+            setResult(resAverage, isFinite(avg) ? fmt(avg) : '—');
           } else {
             setResult(resAverage, 'Not defined (a = b)');
           }
@@ -1212,7 +1212,7 @@
           if (!isFinite(v)) {
             if (v === Infinity) return '+∞';
             if (v === -Infinity) return '−∞';
-            return 'NaN';
+            return '—';
           }
           const d = getDecimals();
           return Number(v.toFixed(d)).toString();
@@ -1373,9 +1373,9 @@
           // Simpson with n and 2n
           const I1 = integrateSimpson(f, a, b, n, evalCounter);
           if (!isFinite(I1.value)) {
-            setResult(resIntegral, 'NaN');
-            setResult(resAbsArea, 'NaN');
-            setResult(resAverage, 'NaN');
+            setResult(resIntegral, '—');
+            setResult(resAbsArea, '—');
+            setResult(resAverage, '—');
             setResult(resError, '—');
             setResult(resConvergence, 'Function returned non-finite values inside the interval.');
             setResult(resWarnings, 'Check the domain of your function. Division by zero, negative arguments for sqrt, or log of non-positive numbers may occur.');
@@ -1405,11 +1405,11 @@
 
           const totalEvals = evalCounter.count + evalCounterAbs.count;
           setResult(resIntegral, fmt(I));
-          setResult(resAbsArea, isFinite(absArea) ? fmt(absArea) : 'NaN');
+          setResult(resAbsArea, isFinite(absArea) ? fmt(absArea) : '—');
 
           if (b !== a) {
             const avg = I / (b - a);
-            setResult(resAverage, isFinite(avg) ? fmt(avg) : 'NaN');
+            setResult(resAverage, isFinite(avg) ? fmt(avg) : '—');
           } else {
             setResult(resAverage, 'Not defined (a = b)');
           }
@@ -1543,7 +1543,7 @@
           if (!isFinite(v)) {
             if (v === Infinity) return '+∞';
             if (v === -Infinity) return '−∞';
-            return 'NaN';
+            return '—';
           }
           const d = getDecimals();
           return Number(v.toFixed(d)).toString();
@@ -1704,9 +1704,9 @@
           // Simpson with n and 2n
           const I1 = integrateSimpson(f, a, b, n, evalCounter);
           if (!isFinite(I1.value)) {
-            setResult(resIntegral, 'NaN');
-            setResult(resAbsArea, 'NaN');
-            setResult(resAverage, 'NaN');
+            setResult(resIntegral, '—');
+            setResult(resAbsArea, '—');
+            setResult(resAverage, '—');
             setResult(resError, '—');
             setResult(resConvergence, 'Function returned non-finite values inside the interval.');
             setResult(resWarnings, 'Check the domain of your function. Division by zero, negative arguments for sqrt, or log of non-positive numbers may occur.');
@@ -1736,11 +1736,11 @@
 
           const totalEvals = evalCounter.count + evalCounterAbs.count;
           setResult(resIntegral, fmt(I));
-          setResult(resAbsArea, isFinite(absArea) ? fmt(absArea) : 'NaN');
+          setResult(resAbsArea, isFinite(absArea) ? fmt(absArea) : '—');
 
           if (b !== a) {
             const avg = I / (b - a);
-            setResult(resAverage, isFinite(avg) ? fmt(avg) : 'NaN');
+            setResult(resAverage, isFinite(avg) ? fmt(avg) : '—');
           } else {
             setResult(resAverage, 'Not defined (a = b)');
           }
