--- a/sito_modificato/limit.html
+++ b/sito_modificato/limit.html
@@ -939,7 +939,7 @@
           if (!isFinite(v)) {
             if (v === Infinity) return '+∞';
             if (v === -Infinity) return '−∞';
-            return 'NaN';
+            return '—';
           }
           const d = getDecimals();
           return Number(v.toFixed(d)).toString();
@@ -1339,7 +1339,7 @@
           if (!isFinite(v)) {
             if (v === Infinity) return '+∞';
             if (v === -Infinity) return '−∞';
-            return 'NaN';
+            return '—';
           }
           const d = getDecimals();
           return Number(v.toFixed(d)).toString();
@@ -1739,7 +1739,7 @@
           if (!isFinite(v)) {
             if (v === Infinity) return '+∞';
             if (v === -Infinity) return '−∞';
-            return 'NaN';
+            return '—';
           }
           const d = getDecimals();
           return Number(v.toFixed(d)).toString();
