--- a/sito_modificato/index.html
+++ b/sito_modificato/index.html
@@ -127,7 +127,7 @@
 
     'use strict';
 
-  window.MathJax = { tex: { inlineMath: [['\\(','\\)'], [',
+  window.MathJax = { tex: { inlineMath: [['\\(','\\)'], ['$', '$']] },
     svg: { fontCache: 'global' }
   };
 
@@ -167,7 +167,7 @@
   "name": "CalcDomain - Free Online Calculators for Every Need",
   "url": "https://calcdomain.com",
   "description": "Access 1700+ free online calculators at CalcDomain. From financial planning to health metrics, math conversions to construction projects - find the perfect calculator for any calculation.",
-  P26-01-21",
+  "dateModified": "2026-01-21",
   "isPartOf": {
     "@type": "WebSite",
     "name": "CalcDomain",
@@ -696,7 +696,7 @@
     </div>
 
     <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-      <p>© 2025 CalcDomain. All Rights Reserved. | Free Online Calculators for Everyone</p>
+      <p>© 2026 CalcDomain. All Rights Reserved. | Free Online Calculators for Everyone</p>
     </div>
   </div>
 </footer><hr class="auditspine-hr"><section aria-label="Formulas, sources, changelog, verification">
@@ -1168,7 +1168,7 @@
     </div>
 
     <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-      <p>© 2025 CalcDomain. All Rights Reserved. | Free Online Calculators for Everyone</p>
+      <p>© 2026 CalcDomain. All Rights Reserved. | Free Online Calculators for Everyone</p>
     </div>
   </div>
 </footer><hr class="auditspine-hr"><section aria-label="Formulas, sources, changelog, verification">
@@ -1640,7 +1640,7 @@
     </div>
 
     <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400">
-      <p>© 2025 CalcDomain. All Rights Reserved. | Free Online Calculators for Everyone</p>
+      <p>© 2026 CalcDomain. All Rights Reserved. | Free Online Calculators for Everyone</p>
     </div>
   </div>
 </footer><hr class="auditspine-hr"><section aria-label="Formulas, sources, changelog, verification">
@@ -1738,7 +1738,7 @@
 </div><footer id="siteFooter" class="bg-gray-900 text-white py-12">
   <div class="container mx-auto px-4">
     <div class="border-t border-gray-800 pt-8 text-center text-gray-400">
-      <p>© 2025 CalcDomain. All Rights Reserved. | Free Online Calculators for Everyone</p>
+      <p>© 2026 CalcDomain. All Rights Reserved. | Free Online Calculators for Everyone</p>
     </div>
   </div>
 </footer><script src="/assets/js/mobile-menu.js" defer=""></script><script src="/assets/js/page-enhancements.js" defer=""></script><script>
@@ -1817,7 +1817,7 @@ document.addEventListener('DOMContentLoaded', function() {
   "name": "CalcDomain - Free Online Calculators for Every Need",
   "url": "https://calcdomain.com",
   "description": "Access 1700+ free online calculators at CalcDomain. From financial planning to health metrics, math conversions to construction projects - find the perfect calculator for any calculation.",
-  P26-01-21",
+  "dateModified": "2026-01-21",
   "isPartOf": {
     "@type": "WebSite",
     "name": "CalcDomain",
@@ -1975,7 +1975,7 @@ document.addEventListener('DOMContentLoaded', function() {
   "name": "CalcDomain - Free Online Calculators for Every Need",
   "url": "https://calcdomain.com",
   "description": "Access 1700+ free online calculators at CalcDomain. From financial planning to health metrics, math conversions to construction projects - find the perfect calculator for any calculation.",
-  P26-01-21",
+  "dateModified": "2026-01-21",
   "isPartOf": {
     "@type": "WebSite",
     "name": "CalcDomain",
