--- a/sito_modificato/linear-algebra.html
+++ b/sito_modificato/linear-algebra.html
@@ -696,7 +696,7 @@
       const resultEl = document.getElementById('matrix-result');
 
       function formatNumber(x) {
-        if (!isFinite(x)) return 'NaN';
+        if (!isFinite(x)) return '—';
         const absx = Math.abs(x);
         if (absx !== 0 && (absx < 1e-6 || absx > 1e8)) {
           return x.toExponential(6);
