--- a/sito_modificato/mortgage-payment.html
+++ b/sito_modificato/mortgage-payment.html
@@ -540,10 +540,7 @@ const debounce = (fn, delay = 100) => {
         try {
           return new Intl.NumberFormat('en-US', { style: 'currency', currency: cur }).format(safe);
         } catch {
-          return (cur === 'EUR' ? '€' : cur === 'GBP' ? '£' : '
-</body>
-</html>
-) + round2(safe).toFixed(2);
+          return (cur === 'EUR' ? '€' : cur === 'GBP' ? '£' : '$') + round2(safe).toFixed(2);
         }
       };
 
@@ -752,8 +749,18 @@ const debounce = (fn, delay = 100) => {
       // Events
       els.calcBtn.addEventListener('click', update);
       els.resetBtn.addEventListener('click', () => {
-el.addEventListener('change', debouncedUpdate);
-  });
+        els.loanAmount.value = '350000';
+        els.interestRate.value = '6.5';
+        els.loanTermYears.value = '30';
+        els.extraPrincipal.value = '0';
+        els.annualTax.value = '0';
+        els.annualInsurance.value = '0';
+        els.monthlyPMI.value = '0';
+        els.monthlyHOA.value = '0';
+        els.currency.value = 'USD';
+        els.paymentsPerYear.value = '12';
+        update();
+      });
 
 
 
