--- a/sito_modificato/subcategories/math-conversions-measurement-unit-conversions.html
+++ b/sito_modificato/subcategories/math-conversions-measurement-unit-conversions.html
@@ -2,17 +2,17 @@
 <html lang="en">
   <head>
     <link rel="canonical" href="https://calcdomain.com/subcategories/math-conversions-measurement-unit-conversions" />
-    <title>Measurement Unit Conversions: Tools & [2024] | CalcDomain</title>
+    <title>Measurement Unit Conversions [2026] | CalcDomain</title>
     <meta name="description" content="Explore Measurement Unit Conversions: tools, converters, and quick references in one place. Find the right tool fast with clear labels, examples, and tips." />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Measurement Unit Conversions: Tools & [2024] | CalcDomain" />
+    <meta property="og:title" content="Measurement Unit Conversions [2026] | CalcDomain" />
     <meta property="og:description" content="Explore Measurement Unit Conversions: tools, converters, and quick references in one place. Find the right tool fast with clear labels, examples, and tips." />
     <meta property="og:url" content="https://calcdomain.com/subcategories/math-conversions-measurement-unit-conversions" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Measurement Unit Conversions: Tools & [2024] | CalcDomain" />
+    <meta name="twitter:title" content="Measurement Unit Conversions [2026] | CalcDomain" />
     <meta name="twitter:description" content="Explore Measurement Unit Conversions: tools, converters, and quick references in one place. Find the right tool fast with clear labels, examples, and tips." />
 
     
@@ -322,7 +322,7 @@
             >
             &raquo;
             <a
-              href="https://calcdomain.com/categories/math-conversions"
+              href="https://calcdomain.com/math-conversions"
               class="hover:text-blue-600"
               >Math & Conversions</a
             >
@@ -1490,7 +1490,6 @@
 
 
 
-<section class="bg-white p-4 rounded-lg shadow-md mt-6"><h2 class="text-lg font-semibold mb-2">Coverage and scope</h2><p class="text-sm text-gray-700">This collection covers: Math, Conversions, Measurement, Unit, Conversions. Below you will find tools available on this page.</p><ul class="text-sm text-gray-700 list-disc pl-5 mt-2"><li>CalcDomain Advanced Search Categories Advanced Search Categories Measurement Unit Conversions: Tools & Home &raquo; Math & Conversions &raquo; Measurement Unit Conversions 122 calculators available Specialized tools for Measurement Unit Conversions. Search above to find specific calculators. Speed Unit Converter (mph, kph, m/s, knots)</li><li>Volume Unit Converter (Gallons, Liters, cubic ft, cubic m)</li><li>Universal Unit Converter</li><li>Weight/Mass Unit Converter (lbs, kg, stone, tons)</li><li>Cubic meters to liters converter</li><li>Tons to pounds converter</li><li>Pints to liters converter</li><li>Force & torque</li><li>Biblical units converter</li><li>Beaufort wind scale converter</li></ul></section><!-- %%EEAT_STRIP%% -->
 <!-- %%QUALITY_BLOCKS%% -->
 <!-- %%FAQ_JSONLD%% -->
 </main>
@@ -1534,14 +1533,14 @@
               <ul class="space-y-3">
                 <li>
                   <a
-                    href="https://calcdomain.com/categories/math-conversions"
+                    href="https://calcdomain.com/math-conversions"
                     class="text-blue-600 hover:underline"
                     >All Math & Conversions</a
                   >
                 </li>
                 <li>
                   <a
-                    href="https://calcdomain.com/subcategories/math-conversions-geometry"
+                    href="https://calcdomain.com/subcategories/subcategories/math-conversions-geometry.html.html"
                     class="text-blue-600 hover:underline"
                     >Geometry</a
                   >
@@ -2001,7 +2000,7 @@
           <a class="card" href="https://calcdomain.com/dd-to-dms">
             <h3>Decimal Degrees to Degrees, Minutes, Seconds Converter</h3>
             <p>Calculate Decimal Degrees to Degrees, Minutes, Seconds Converter in seconds with this free tool. Get accurate results, formulas, and tips - start now.</p></a>
-          <a class="card" href="https://calcdomain.com/subcategories/math-conversions-measurement-unit-conversions">
+          <a class="card" href="https://calcdomain.com/math-conversions-measurement-unit-conversions">
             <h3>Measurement Unit Conversions</h3>
             <p>Calculate Measurement Unit Conversions Calculators - 122 Math &amp; Conversions Tools in seconds with this free tool. Get results and tips - start now.</p></a>
           <a class="card" href="https://calcdomain.com/acres-to-square-feet">
@@ -2277,7 +2276,7 @@
           class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400"
         >
           <p>
-            &copy; 2026 CalcDomain. All Rights Reserved. | Free Online
+            &copy; 2025 CalcDomain. All Rights Reserved. | Free Online
             Calculators for Everyone
           </p>
         </div>
