--- a/sito_modificato/loan-amortization-calculator.html
+++ b/sito_modificato/loan-amortization-calculator.html
@@ -863,7 +863,7 @@
                                             <th class="px-3 py-2 text-right">Balance</th>
                                         </tr>
                                     </thead>
-                                    <tbody id="scheduleBody"></tbody>
+                                    <tbody id="scheduleBodyAlt1"></tbody>
                                 </table>
                             </div>
                         </div>
@@ -1239,7 +1239,7 @@
                                             <th class="px-3 py-2 text-right">Balance</th>
                                         </tr>
                                     </thead>
-                                    <tbody id="scheduleBody"></tbody>
+                                    <tbody id="scheduleBodyAlt2"></tbody>
                                 </table>
                             </div>
                         </div>
