--- a/sito_modificato/mm-to-inches.html
+++ b/sito_modificato/mm-to-inches.html
@@ -32,8 +32,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
     
-    <link rel="preload" href="https://calcdomain.com/assets/tailwind.min.css" as="style">
-    <link rel="stylesheet" href="https://calcdomain.com/assets/tailwind.min.css">
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body { font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif; }
         .card-hover { transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out; }
